fix(i18n): complete missing keys and improve bindings
- i18n.js: add copied/copyFailed, preparingContent/generatingContent, generatedAudio/downloadAudioFile; add imageGeneratedDone/audioGeneratedDone; hero mapping prefers voice-specific keys
- ui_enhancements.js: use i18n messages for done status
- voice.html: bind use-case pills with data-i18n keys

No behavior changes; safer language switching.

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -537,21 +537,29 @@
         <section class="use-cases-section">
           <h2 class="section-title" data-i18n="voiceUseCasesTitle">应用场景</h2>
           <div class="pill-list" aria-label="应用场景" role="list">
-            <span class="pill" role="listitem"><span class="icon">🎙️</span><span>播客</span></span>
             <span class="pill" role="listitem"
-              ><span class="icon">📚</span><span>有声读物</span></span
+              ><span class="icon">🎙️</span
+              ><span data-i18n="voiceUseCase1Title">播客制作</span></span
             >
             <span class="pill" role="listitem"
-              ><span class="icon">🎓</span><span>教育培训</span></span
+              ><span class="icon">📚</span
+              ><span data-i18n="voiceUseCase2Title">有声读物</span></span
             >
             <span class="pill" role="listitem"
-              ><span class="icon">📢</span><span>营销推广</span></span
+              ><span class="icon">🎓</span
+              ><span data-i18n="voiceUseCase3Title">教育培训</span></span
             >
             <span class="pill" role="listitem"
-              ><span class="icon">🎬</span><span>视频配音</span></span
+              ><span class="icon">📢</span
+              ><span data-i18n="voiceUseCase4Title">营销推广</span></span
             >
             <span class="pill" role="listitem"
-              ><span class="icon">🔧</span><span>辅助工具</span></span
+              ><span class="icon">🎬</span
+              ><span data-i18n="voiceUseCase5Title">视频制作</span></span
+            >
+            <span class="pill" role="listitem"
+              ><span class="icon">🔧</span
+              ><span data-i18n="voiceUseCase6Title">辅助工具</span></span
             >
           </div>
         </section>
