fix(i18n): bind voice progress/audio fallback and add missing keys
- voice.html: data-i18n for progress label and audio fallback
- i18n.js: add audioUnsupported and missing status/done keys (en/zh)

Safer language switching; no behavior change.

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -423,11 +423,17 @@
             <!-- 进度条 -->
             <div id="voice-progress" class="voice-progress" style="display: none">
               <div class="voice-progress-bar" id="voice-progress-bar" style="width: 0%"></div>
-              <div class="voice-progress-label" id="voice-progress-label">准备中...</div>
+              <div
+                class="voice-progress-label"
+                id="voice-progress-label"
+                data-i18n="preparingContent"
+              >
+                准备中...
+              </div>
             </div>
             <div class="audio-player-container">
               <audio id="generated-audio" controls class="audio-player">
-                您的浏览器不支持音频播放。
+                <span data-i18n="audioUnsupported">您的浏览器不支持音频播放。</span>
               </audio>
             </div>
             <!-- 波形可视化 -->
