chore(i18n): finalize cleanup and bind remaining UI texts
- i18n.js: static single en dictionary; keep dynamic og/twitter title sync
- voice.html: bind related cards with data-i18n
- ui_enhancements.js: use t('generatingContent') for loading status

All i18n fallbacks unified; low risk.

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -575,19 +575,21 @@
           <h2 class="section-title" data-i18n="relatedContentTitle">继续探索</h2>
           <div class="related-grid">
             <div class="related-card">
-              <h3>📖 语音使用教程</h3>
-              <p>从入门到进阶，快速掌握语音合成功能</p>
-              <a href="tutorial.html#voice" class="related-link">查看教程 →</a>
+              <h3 data-i18n="relatedTutorialTitle">📖 快速上手</h3>
+              <p data-i18n="relatedTutorialDesc">学习如何使用各项功能，获得最佳体验</p>
+              <a href="tutorial.html#voice" class="related-link" data-i18n="startLearning"
+                >开始学习 →</a
+              >
             </div>
             <div class="related-card">
-              <h3>❓ 常见问题（语音）</h3>
-              <p>遇到问题？查看语音相关的常见问答</p>
-              <a href="faq.html#voice" class="related-link">查看FAQ →</a>
+              <h3 data-i18n="relatedVoiceGenTitle">🎵 AI语音合成</h3>
+              <p data-i18n="relatedVoiceGenDesc">将文字转换为自然语音，完全免费使用</p>
+              <a href="voice.html" class="related-link" data-i18n="tryNow">前往体验 →</a>
             </div>
             <div class="related-card">
-              <h3>💬 反馈与建议</h3>
-              <p>遇到异常或有新想法？欢迎告诉我们</p>
-              <a href="feedback-ui.html" class="related-link">我要反馈 →</a>
+              <h3 data-i18n="relatedImageGenTitle">🎨 AI图片生成</h3>
+              <p data-i18n="relatedImageGenDesc">体验我们的核心服务，将想法转化为精美图像</p>
+              <a href="image-generator.html" class="related-link" data-i18n="tryNow">前往体验 →</a>
             </div>
           </div>
         </section>
