--- a/frontend/about.html
+++ b/frontend/about.html
@@ -59,14 +59,12 @@
         <span class="site-name">AISTONE</span>
       </div>
       <ul class="navbar-menu">
-        <li><a href="/" data-i18n="navHome">Home</a></li>
-        <li><a href="voice.html" data-i18n="navVoiceGen">Voice</a></li>
-        <li><a href="about.html" class="active" data-i18n="navAbout">About</a></li>
-        <li><a href="ai-guide.html" data-i18n="navAIGuide">AI Guide</a></li>
-        <li><a href="prompt-engineering.html" data-i18n="navPromptEngineering">Prompt</a></li>
-        <li><a href="tutorial.html" data-i18n="navTutorial">Tutorial</a></li>
-        <li><a href="faq.html" data-i18n="navFAQ">FAQ</a></li>
-        <li><a href="contact.html" data-i18n="navContact">Contact</a></li>
+        <li><a href="/" data-i18n="navHome">首页</a></li>
+        <li><a href="image-generator.html" data-i18n="navImageGen">图像生成</a></li>
+        <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
+        <li><a href="blog.html" data-i18n="navBlog">博客</a></li>
+        <li><a href="about.html" class="active" data-i18n="navAbout">关于我们</a></li>
+        <li><a href="contact.html" data-i18n="navContact">联系我们</a></li>
       </ul>
       <div class="navbar-right">
         <select id="lang-select" class="lang-select">
