--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -33,10 +33,7 @@
         <li><a href="/" data-i18n="navHome">首页</a></li>
         <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
         <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
-        <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
-        <li><a href="prompt-engineering.html" data-i18n="navPromptEngineering">提示词工程</a></li>
-        <li><a href="tutorial.html" data-i18n="navTutorial">使用教程</a></li>
-        <li><a href="faq.html" data-i18n="navFAQ">常见问题</a></li>
+        <li><a href="blog.html" data-i18n="navBlog">博客</a></li>
         <li><a href="contact.html" class="active" data-i18n="navContact">联系我们</a></li>
       </ul>
       <div class="navbar-right">
