🌍 完成多语言国际化：修复所有中文内容
✨ 完整国际化覆盖：
📍 **使用指南步骤**：
- 为4个步骤标题和描述添加data-i18n属性
- 包括：访问平台、选择模型、输入描述、生成内容

📍 **关于AISTONE区域**：
- 主标题、描述段落的完整国际化
- AI图像生成、AI语音合成、极速便捷的标题和描述
- 平台理念的标题和内容

📍 **特色功能标题**：
- 永久免费、极速生成、专业品质等6个特色功能标题
- 新增对应的英文翻译键值对

🔧 技术改进：
- 在i18n.js中新增20+个翻译键值对
- 中英文完全对应，提供一致的用户体验
- 英文模式下不再有任何硬编码中文内容

✅ 现在网站真正实现了完整的多语言支持！

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1467,6 +1467,7 @@
                   margin-bottom: 10px;
                   font-weight: 600;
                 "
+                data-i18n="step1Title"
               >
                 访问平台
               </h4>
@@ -1476,6 +1477,7 @@
                   font-size: 0.95em;
                   line-height: 1.5;
                 "
+                data-i18n="step1Desc"
               >
                 访问 aistone.org，选择图像生成或语音合成服务，无需注册直接使用
               </p>
@@ -1506,6 +1508,7 @@
                   margin-bottom: 10px;
                   font-weight: 600;
                 "
+                data-i18n="step2Title"
               >
                 选择模型
               </h4>
@@ -1515,6 +1518,7 @@
                   font-size: 0.95em;
                   line-height: 1.5;
                 "
+                data-i18n="step2Desc"
               >
                 根据需求选择FLUX、Turbo、Kontext或DeepSeek模型，每个模型都有独特优势
               </p>
@@ -1545,6 +1549,7 @@
                   margin-bottom: 10px;
                   font-weight: 600;
                 "
+                data-i18n="step3Title"
               >
                 输入描述
               </h4>
@@ -1554,6 +1559,7 @@
                   font-size: 0.95em;
                   line-height: 1.5;
                 "
+                data-i18n="step3Desc"
               >
                 用中文或英文详细描述您想要的内容，AI将基于描述生成对应的图像或语音
               </p>
@@ -1584,6 +1590,7 @@
                   margin-bottom: 10px;
                   font-weight: 600;
                 "
+                data-i18n="step4Title"
               >
                 生成内容
               </h4>
@@ -1593,6 +1600,7 @@
                   font-size: 0.95em;
                   line-height: 1.5;
                 "
+                data-i18n="step4Desc"
               >
                 点击生成按钮，AI模型将创建高质量的图像或自然语音，支持下载和商用
               </p>
@@ -1624,11 +1632,24 @@
               margin: 0 auto;
             "
           >
-            <h2 style="font-size: 2.5em; margin-bottom: 25px; font-weight: 700">关于 AISTONE</h2>
-            <p style="font-size: 1.25em; line-height: 1.8; margin-bottom: 35px; opacity: 0.95">
+            <h2
+              style="font-size: 2.5em; margin-bottom: 25px; font-weight: 700"
+              data-i18n="aboutTitle"
+            >
+              关于 AISTONE
+            </h2>
+            <p
+              style="font-size: 1.25em; line-height: 1.8; margin-bottom: 35px; opacity: 0.95"
+              data-i18n="aboutDesc1"
+            >
               AISTONE 是一个基于 Pollinations.AI
               技术的智能内容创作平台，集成了文本生成图片与语音功能，
               致力于为用户提供高效、便捷、免费的AI内容创作体验。我们的平台支持文本生成图片、文本生成语音等多种创作功能。
+            </p>
+            <p
+              style="font-size: 1.25em; line-height: 1.8; margin-bottom: 35px; opacity: 0.95"
+              data-i18n="aboutDesc2"
+            >
               无论你是设计师、内容创作者，还是普通用户，只需输入一句描述，就能一键生成高质量的视觉内容或语音内容。
             </p>
             <div
@@ -1641,24 +1662,39 @@
             >
               <div style="text-align: center; padding: 20px">
                 <div style="font-size: 3.5em; margin-bottom: 20px">🎨</div>
-                <h3 style="margin-bottom: 15px; font-size: 1.3em">AI 图像生成</h3>
-                <p style="font-size: 1em; opacity: 0.9; line-height: 1.6">
+                <h3 style="margin-bottom: 15px; font-size: 1.3em" data-i18n="aboutImageTitle">
+                  AI 图像生成
+                </h3>
+                <p
+                  style="font-size: 1em; opacity: 0.9; line-height: 1.6"
+                  data-i18n="aboutImageDesc"
+                >
                   基于FLUX、Turbo、Kontext、DeepSeek等先进模型，支持多种艺术风格，
                   从写实摄影到抽象艺术，满足各种创作需求
                 </p>
               </div>
               <div style="text-align: center; padding: 20px">
                 <div style="font-size: 3.5em; margin-bottom: 20px">🎙️</div>
-                <h3 style="margin-bottom: 15px; font-size: 1.3em">AI 语音合成</h3>
-                <p style="font-size: 1em; opacity: 0.9; line-height: 1.6">
+                <h3 style="margin-bottom: 15px; font-size: 1.3em" data-i18n="aboutVoiceTitle">
+                  AI 语音合成
+                </h3>
+                <p
+                  style="font-size: 1em; opacity: 0.9; line-height: 1.6"
+                  data-i18n="aboutVoiceDesc"
+                >
                   将文本转换为自然流畅的语音，支持多种音色和语言，
                   适合制作播客、有声读物、教学内容等
                 </p>
               </div>
               <div style="text-align: center; padding: 20px">
                 <div style="font-size: 3.5em; margin-bottom: 20px">⚡</div>
-                <h3 style="margin-bottom: 15px; font-size: 1.3em">极速便捷</h3>
-                <p style="font-size: 1em; opacity: 0.9; line-height: 1.6">
+                <h3 style="margin-bottom: 15px; font-size: 1.3em" data-i18n="aboutSpeedTitle">
+                  极速便捷
+                </h3>
+                <p
+                  style="font-size: 1em; opacity: 0.9; line-height: 1.6"
+                  data-i18n="aboutSpeedDesc"
+                >
                   云端算力支持，保证生成速度与质量，界面简洁友好， 适配多终端设备，随时随地创作
                 </p>
               </div>
@@ -1677,10 +1713,14 @@
                   margin-bottom: 15px;
                   color: var(--color-brand-secondary, #00cfff);
                 "
+                data-i18n="aboutPhilosophyTitle"
               >
                 平台理念
               </h4>
-              <p style="font-size: 1em; opacity: 0.9; line-height: 1.7">
+              <p
+                style="font-size: 1em; opacity: 0.9; line-height: 1.7"
+                data-i18n="aboutPhilosophyDesc"
+              >
                 我们相信AI技术应该普惠大众，因此所有功能永久免费开放。
                 助力每一位用户释放创意灵感，实现从文字到视觉、从文字到语音的无限可能。
                 保护用户隐私，生成内容版权归用户所有，支持商业用途。
